crates/atlas-runtime/tests/snapshots/assignment_target_modern__incdec_increment_array.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Increment:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
        index:
          Single:
            Literal:
              - Number: 0
              - start: 4
                end: 5
        span:
          start: 0
          end: 6
    span:
      start: 0
      end: 9
